--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.1"
   },
   "devDependencies": {
-    "browser-sync": "^2.27.10"
+    "browser-sync": "^2.27.10",
+    "nodemon": "^2.0.16"
   }
 }
